Migrate TestDeltaLakeSystemTableCompatibility to JUnit